# lorq

./: .gitignore  AGENTS.md  CHANGELOG.md  LORQ_Benchmarking_Strategy.md  README.md  ROADMAP.md  eval.config.yaml  mkdocs.yml  presentation_graphify_crg.html  pyproject.toml
.agents/: LORQ_AGENT_RULES.md  LORQ_DOTNET_ENGINEERING_RULES.md  README.md
cases/: admin-permissions.yaml  inactive-customers-csv.yaml
docs/: README.md  architecture.md  backend-contract.md  backends.md  cases.md  configuration.md  graphify.md  index.md  modes.md  normalized-events.md  portability.md  pricing.md  project.json  quickstart.md  validation-contract.md
dotnet/: Directory.Packages.props  Lorq.slnx  README.md
eval_runner/: agents.py  aggregate.py  cases.py  cli.py  config.py  contracts.py  events.py  judge.py  lifecycle.py  metadata.py  modes.py  pricing.py  prompts.py  reports.py  repositories.py  rubrics.py  schema.py  utils.py  worktrees.py
fixtures/: README.md
lorq_final_findings_artifact/: LORQ_Graphify_CRG_Final_Findings.docx  LORQ_Graphify_CRG_Final_Findings.md
modes/: base-default-graphify-plus.yaml  base-default-graphify.yaml  base-only.yaml  custom-tool-example.yaml  default-graphify-plus.yaml  default-graphify.yaml  no-skill.yaml
pricing/: openai-pricing.example.yaml
prompt_styles/: forced.txt  neutral.txt  weak-hint.txt
python/: CHANGELOG.md  README.md  SIMON_GRAPHIFY_TEST.md
repositories/: repositories.yaml
rubrics/: authorization.yaml  repository-exploration.yaml
schemas/: agent-profile.schema.json  aggregate-summary.schema.json  case.schema.json  (+17 more)
(+956 files in other folders)
