[project]
name = "generic-agent-eval-runner"
version = "1.2.4"
description = "Portable contract-ready generic evaluator for comparing AI agent modes, skills, prepared tool environments, prompt styles, and validated YAML suites."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
copilot = [
  "github-copilot-sdk"
]
dev = [
  "pytest>=7.0"
]

[project.scripts]
agent-eval = "eval_runner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
